--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="asset/styles/style.css">
 </head>
 <body>
-    <div >
-        <button>
-         login</button>
+    <div class="form-group">
+        <button type="login" id="login" class="login-button">
+
+    login</button>
     </div>
     
 </body>
