--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="asset/styles/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="form-group">
-        <button type="login" id="login" class="login-button">
-
-    login</button>
+    <div class="btn">
+        <button>login</button>
+        <button>sign up</button>
+        <button>registration</button>
     </div>
-    
 </body>
 </html>
