--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document</title>
     <link rel="stylesheet" href="asset/styles/style.css">
 </head>
 <body>
-    <div class="form-group">
-        <button type="login" id="login" class="login-button">
-
-    login</button>
+    <button id="rollButton"> Roll me</button>
+    <div>
+        <label for="">Current Roll</lebel>
+            <p class="currentRoll"></p>
+        </div>
+    <div>
+    <label for="">Current rolling Total</label>
+    <p class="currentRollingTotal"></p>
     </div>
-    
+    <div>
+    <label for="">Game Total</label>
+        <p class="game"></p>
+    </div>
+    <script src="asset/scripts/script.js"></script>
 </body>
 </html>
