Correcting my linter errors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,22 @@
     <title>document</title>
     <link rel="stylesheet" href="asset/styles/style.css">
 </head>
+
 <body>
-    <button id="rollButton"> Roll me</button>
+    <button id="rollbutton"> Roll me</button>
     <div>
         <label for="">Current Roll</lebel>
-            <p class="currentRoll"></p>
-        </div>
-    <div>
-    <label for="">Current rolling Total</label>
-    <p class="currentRollingTotal"></p>
+            <p class="currentroll"></p>
     </div>
     <div>
-    <label for="">Game Total</label>
+        <label for="">Current rolling Total</label>
+        <p class="currentrollingtotal"></p>
+    </div>
+    <div>
+        <label for="">Game Total</label>
         <p class="game"></p>
     </div>
     <script src="asset/scripts/script.js"></script>
 </body>
+
 </html>
