Adding some contents in my html file

--- a/index.html
+++ b/index.html
@@ -10,20 +10,8 @@
 </head>
 
 <body>
-    <button id="rollbutton"> Roll me</button>
-    <div>
-        <label for="">Current Roll</lebel>
-            <p class="currentroll"></p>
-    </div>
-    <div>
-        <label for="">Current rolling Total</label>
-        <p class="currentrollingtotal"></p>
-    </div>
-    <div>
-        <label for="">Game Total</label>
-        <p class="game"></p>
-    </div>
-    <script src="asset/scripts/script.js"></script>
-</body>
+    <button>Yo</button>
+    <button>Wassup</button>
+    <button>Man</button>
 
 </html>
