Changing my background color and button color

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Document</title>
 </head>
 <div class="btn">
-    <button>login</button>
-    <button>sign up</button>
-    <button>registration</button>
+    <button class="btn1">login</button>
+    <button class="btn2">sign up</button>
+    <button class="btn3">registration</button>
 </div>
 </body>
 
